--- a/nav-page.html
+++ b/nav-page.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="css/nav-page.css">
   </head>
   <body>
-    <div class="page-wrapper">
+    <div class="page-wrapper white-s">
       <header class="header header-main container">
         <div class="header__wrapper wrapper"><img class="header__logo" src="img/logo-w.svg" alt=""/>
           
