--- a/nav-page.html
+++ b/nav-page.html
@@ -91,7 +91,7 @@
             <b>ПАРАД <br> ЗВЕЗД</b>
           </div>
           <div class="nav-page__item nav-page__logo">
-            <a href="#"><img src="img/page-nav/baner.jpg" alt=""></a><img src="img/page-nav/logo.png" alt="">
+            <a href="https://events.webinar.ru/18541101/kino2112" target="_blank"><img src="img/page-nav/baner.jpg" alt=""></a><img src="img/page-nav/logo.png" alt="">
           </div>
           <div class="nav-page__item nav-page__dk">
             <a href="#"></a><img src="img/page-nav/dk.png" alt="">
