--- a/station.html
+++ b/station.html
@@ -50,7 +50,7 @@
     <script src="js/common.min.js"></script>
   </head>
   <body>
-    <div class="page-wrapper page-map">
+    <div class="page-wrapper page-map  white-s">
       <header class="header container">
         <div class="header__wrapper wrapper"><img class="header__logo" src="img/logo.svg" alt=""/>
           <div class="header__user">
@@ -77,10 +77,28 @@
         </div>
         <div class="station__map">
           <h1 class="station__map-heading">Вокруг ЛокоПолиса за 8 дней</h1>
-          <!-- <div class="station__map-dots" data-dots="1"></div>
-          <div class="station__map-dots" data-dots="2"></div><a class="station__map-star" href="#" data-star="1"></a><a class="station__map-star" href="#" data-star="2"></a><a class="station__map-star" href="#" data-star="3"></a><a class="station__map-star" href="#" data-star="4"></a><a class="station__map-star" href="#" data-star="5"></a><a class="station__map-star" href="#" data-star="6"></a><a class="station__map-star" href="#" data-star="7"></a><a class="station__map-star" href="#" data-star="8"></a><a class="station__map-star" href="#" data-star="9"></a><a class="station__map-star" href="#" data-star="10"></a><a class="station__map-star" href="#" data-star="11"></a><a class="station__map-star" href="#" data-star="12"></a><a class="station__map-star" href="#" data-star="13"></a><a class="station__map-star" href="#" data-star="14"></a>
-          <div class="station__map-way"></div> -->
+          <div class="station__map-block">
+            <img src="img/travel/map.png" alt="" class="station__map-img">
+            <div class="station__map-road">
+              <img src="img/travel/way.svg" alt="">
+              <div class="station__map-stars">
+                <a href="#"><img src="img/travel/star.svg" alt=""></a>
+                <a href="#"><img src="img/travel/star.svg" alt=""></a>
+                <a href="#"><img src="img/travel/star.svg" alt=""></a>
+                <a href="#"><img src="img/travel/star.svg" alt=""></a>
+                <a href="#"><img src="img/travel/star.svg" alt=""></a>
+                <a href="#"><img src="img/travel/star.svg" alt=""></a>
+                <a href="#"><img src="img/travel/star.svg" alt=""></a>
+                <a href="#"><img src="img/travel/star.svg" alt=""></a>
+              </div>
+            </div>
+          </div>
+          
           <a class="station__map-btn" href="#">Старт</a>
+          <div class="station__map-bot">
+            <img src="img/travel/bot_snow1.svg" alt="">
+            <img src="img/travel/bot_snow2.svg" alt="">
+          </div>
         </div>
       </section>
       <footer class="footer container footer--train">
